unpackaged/main/default/objects/MQL_Tracking__c/MQL_Tracking__c.object-meta.xml
<CustomObject>
    <description>Object is used to track MQL events. Data populated by Marketo</description>
    <label>MQL Tracking</label>
    <nameField>
        <displayFormat>MQL-{000000}</displayFormat>
        <label>MQL Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MQL Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>