unpackaged/main/default/objects/MQL_Tracking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Contact that corresponds to the MQL event. If a Lead is converted, this will be updated to reflect the associated Contact.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MQL Tracking</relationshipLabel>
    <relationshipName>MQL_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>