unpackaged/main/default/objects/MQL_Tracking__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>This is the date/time of the MQL event.</description>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>