unpackaged/main/default/objects/MQL_Tracking__c/fields/Last_Touch_Program__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Program__c</fullName>
    <description>This is the last program that the Lead or Contact interacted with prior to the MQL event.</description>
    <label>Last Touch Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>