unpackaged/main/default/objects/MQL_Tracking__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Lead that generated the MQL event.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>MQL Tracking</relationshipLabel>
    <relationshipName>MQL_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>