unpackaged/main/default/objects/MQL_Tracking__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>This is the Lead or Contact’s score at the time of the MQL event.</description>
    <label>Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>