unpackaged/main/default/objects/MQL_Tracking__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This is the type of activity that resulted in the Lead or Contact becoming an MQL. Most of these correspond to marketing forms, except for “Score Threshold” which corresponds to a person meeting a specific behavioral and demographic score.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MQL_Type</valueSetName>
    </valueSet>
</CustomField>